# ic-alloy-dca

./: .gitignore  Cargo.toml  Makefile  README.md  dfx.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
scripts/: deploy-agent.sh  deploy-backend.sh  deploy.sh  generate-agent-did.sh  start.sh  stop.sh  transfer-base-token.sh  transfer-in-token.sh  transfer-out-token.sh
src/agent/: Cargo.toml  agent.did
src/agent/declarations/: agent.did  agent.did.d.ts  agent.did.js  index.d.ts  index.js
src/agent/sol/: IUniswapV3SwapRouter.sol
src/agent/src/: auth.rs  run.rs
src/agent/src/evm/: uniswap_v3_factory.rs  uniswap_v3_swap_router.rs
src/agent/src/service/: get_settings.rs  mod.rs  transfer_base_token.rs  transfer_erc20_token.rs
src/agent_frontend/: index.css
src/agent_frontend/components/: event-log.tsx  settings.tsx
src/agent_frontend/hooks/: useBalance.tsx  useCanisterAddress.tsx  useEventLog.tsx  useSettings.tsx
src/backend/: Cargo.toml  backend.did  build.rs
src/backend/declarations/: backend.did  backend.did.d.ts  backend.did.js
src/backend/src/: auth.rs  lib.rs  log.rs  usdc.rs
src/backend/src/canisters/: mod.rs  xrc.rs
src/backend/src/evm/: erc_20.rs  mod.rs  uniswap_v3_factory.rs  uniswap_v3_pool_state.rs  uniswap_v3_swap_router.rs  usdc.rs  (+1 more)
src/frontend/: App.tsx  index.css  main.tsx
src/frontend/components/: balance.tsx  event-log.tsx  settings.tsx
src/frontend/hooks/: useBalance.tsx  useCanisterAddress.tsx  useEventLog.tsx  useSettings.tsx
(+9 files in other folders)
