[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk-timers = "0.10.0"

# Use `ic-alloy` hosted on GitHub. `ic-alloy` is not deployed to crates.io yet
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.0", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }
serde_bytes = "0.11.15"
serde = "1.0.214"

[build-dependencies]
ic-cdk-bindgen = "0.1.3"
dotenv = "0.15.0"
